--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production && clasp push",
     "watch": "webpack --watch",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.4.0",
     "gas-webpack-plugin": "^2.0.1",
     "html-webpack-plugin": "^5.3.1",
+    "prettier": "^2.2.1",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
